# DM-TrafficBot

./: .gitignore  CLAUDE.MD  README.md  build.py  dev-requirements.txt  main.py  pyproject.toml  settings.json  sources.txt  todo.md
core/: browser_engine.py  browser_manager.py  captcha_manager.py  constants.py  engine.py  models.py  proxy_manager.py  stress_engine.py  validators.py
proxies/: gsa.txt  http_https.txt  socks4_5.txt
resources/: referers.txt
tests/: conftest.py  test_config.py  test_models.py  test_utils.py
ui/: __init__.py  app.py  components.py  scaling.py  utils.py
ui/pages/: __init__.py  base.py  dashboard.py  proxy_manager.py  settings.py  stress_test.py
